fix: Experience Title on mobile devices smaller

--- a/src/app/structural-components/experience-section/experience-section.component.css
+++ b/src/app/structural-components/experience-section/experience-section.component.css
@@ -157,3 +157,9 @@ i {
     max-width: none;
   }
 }
+
+@media only screen and (max-width: 700px) {
+  .heading {
+    font-size: 20px;
+  }
+}
